--- a/spacegroupsusers/main/spacegroupsusers.properties
+++ b/spacegroupsusers/main/spacegroupsusers.properties
@@ -1,13 +1,9 @@
-confhost=https://candela-boats.atlassian.net/wiki/
-confuser=user
-confpass=pass
+confhost=https://...
+user=user
+pass=token
 
-conftoken=false
-usetoken=false
-space=~63f72e01ce6f37e5ed94b67c
-ancestortitle=Welcome to Confluence
-groups=true
-users=true
+space=Tools
 report=true
+ancestortitle=Reports
 file=/tmp/Report%s.xlsx
 
